Persist data with frontend

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="cbcbiznetApp">
+<html ng-app="biznetApp">
 <head>
   <title>CBC-BiZNeT</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-  <body ng-controller="productsController">
+  <body ng-controller="productController">
 
     <div class="container">
 
