Comment the code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <div class="container">
 
+      <!-- Form to save data through the endpoint-->
       <div class="col-sm-6">
         <form ng-submit="saveProduct(product)">
           <div class="form-group">
@@ -22,7 +23,8 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-
+      
+      <!-- List to display data throung the endpoint-->
       <div class="col-sm-6">
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="product in agriculture_products">
