Add route for post request

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- List to display data throung the endpoint-->
       <div class="col-sm-6">
         <ul class="list-group">
-          <li class="list-group-item" ng-repeat="product in agriculture_products">
+          <li class="list-group-item" ng-repeat="product in products">
             <h4>{{product.company}}</h4>
             <p>{{product.description}}</p>
             <p>{{product.country}}</p>
